# Kvejken

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: frag.glsl  hand.blend  particle.blend  particle.mtl  terrain.blend  terrain.mtl  test_cube.mtl  test_multiple.mtl  test_rock.mtl  trees.blend  vert.glsl
assets/enemies/: eel.blend  eel2.mtl
assets/environment/: basement.blend  castle.blend  chair.blend  fireplace.blend  gate.blend  gate.mtl  healing_statue.blend  mountain.blend  skybox.blend  skybox.mtl  spawn.blend  spawn.mtl  terrain.blend  terrain.mtl
assets/environment/lever/: hand.blend  hand_anim16.mtl  lever.blend  lever_anim15.mtl
assets/items/: key.blend  key.mtl  skull.blend  skull.mtl  torch.blend  torch.mtl
assets/shaders/: frag.glsl  ui_frag.glsl  ui_vert.glsl  vert.glsl
assets/test/: test_cube.mtl
assets/weapons/: axe.blend  axe.mtl  hammer.blend  hammer.mtl  spiked_club.blend  spiked_club.mtl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/: compile_stb.cpp  stb_image.cpp
src/: Assets.h  Collision.cpp  Collision.h  Components.h  ECS.cpp  ECS.h  Enemy.cpp  Enemy.h  Input.cpp  Input.h  InputDefines.h  Interactable.cpp  Interactable.h  Main.cpp  Model.cpp  Model.h  Particles.cpp  Particles.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  Shader.cpp  Shader.h  UI.cpp  UI.h  Utils.h
